--- a/plan.html
+++ b/plan.html
@@ -60,7 +60,7 @@
     <hr style="height: 2px; background-color: black;">
     <h3>Food</h3>
     <a href="https://www.google.com/maps/place/Shikairou+Chinese+Restaurant/@32.7364739,129.8649562,17z/data=!3m1!5s0x35155310241b807d:0x55374f5f3f5d9984!4m14!1m7!3m6!1s0x3515531023efffff:0xfa207539f0b58758!2sShikairou+Chinese+Restaurant!8m2!3d32.7364695!4d129.8698217!16s%2Fm%2F0nbg3pz!3m5!1s0x3515531023efffff:0xfa207539f0b58758!8m2!3d32.7364695!4d129.8698217!16s%2Fm%2F0nbg3pz?entry=ttu">
-        <img src="/Web/images/800px-Shikairo_Nagasaki_Japan05s.jpg"
+        <img src="800px-Shikairo_Nagasaki_Japan05s.jpg
         width="300px" height="300px">
     </a>
     <a href="https://www.google.com/maps/place/Japanese+YoHira/@32.741265,129.8760232,17z/data=!3m1!4b1!4m6!3m5!1s0x3515531539820c6f:0x5e8a0810b4dcd06e!8m2!3d32.7412605!4d129.8786035!16s%2Fg%2F1td_d_lm?entry=ttu">
