--- a/plan.html
+++ b/plan.html
@@ -72,7 +72,7 @@
     <hr style="height: 2px; background-color: black;">
     <h3>Dessert</h3>
     <a href="https://www.google.com/maps/place/Shooken+Honten/@32.7488218,129.8800223,17z/data=!3m1!5s0x351553470a3e0cad:0x610a289cb86445e7!4m15!1m8!3m7!1s0x351553470a4fa3f1:0xc5a192aa4247e429!2sShooken+Honten!8m2!3d32.7488218!4d129.8800223!10e5!16s%2Fg%2F1tdbhrk7!3m5!1s0x351553470a4fa3f1:0xc5a192aa4247e429!8m2!3d32.7488218!4d129.8800223!16s%2Fg%2F1tdbhrk7?entry=ttu">
-        <img src="/Web/images/kaaa.jpg" height="300px" width="300px">
+        <img src="Web/images/kaaa.jpg" height="300px" width="300px">
     </a>
     <a href="https://www.google.com/maps/place/NGS+COFFEE/@32.7535325,129.8711159,16z/data=!3m1!5s0x3515533a66f63a8b:0x9f1cfed55a497136!4m15!1m8!3m7!1s0x3515539638b8c283:0x51f935751dd420e9!2sNGS+COFFEE!8m2!3d32.753563!4d129.8712503!10e5!16s%2Fg%2F11gmzk6kr_!3m5!1s0x3515539638b8c283:0x51f935751dd420e9!8m2!3d32.753563!4d129.8712503!16s%2Fg%2F11gmzk6kr_?entry=ttu">
         <img src="/Web/images/puuud.jpeg" height="300px" width="300px">
