--- a/plan.html
+++ b/plan.html
@@ -64,10 +64,10 @@
         width="300px" height="300px">
     </a>
     <a href="https://www.google.com/maps/place/Japanese+YoHira/@32.741265,129.8760232,17z/data=!3m1!4b1!4m6!3m5!1s0x3515531539820c6f:0x5e8a0810b4dcd06e!8m2!3d32.7412605!4d129.8786035!16s%2Fg%2F1td_d_lm?entry=ttu">
-        <img src="/Web/images/foooood.jpeg" height="300px" width="300px">
+        <img src="Web/images/foooood.jpeg" height="300px" width="300px">
     </a>
     <a href="https://www.google.com/maps/place/Original+Chawanmushi+YOSSOU+(Hamamachi+Main+Branch)/@32.7445109,129.8761945,17z/data=!3m1!4b1!4m6!3m5!1s0x351553407ee7944d:0x8f290407d10c9eaa!8m2!3d32.7445064!4d129.8787748!16s%2Fg%2F11ckqrg6w7?entry=ttu">
-        <img src="/Web/images/yoo.jpg" height="300px" width="300px">
+        <img src="images/yoo.jpg" height="300px" width="300px">
     </a>
     <hr style="height: 2px; background-color: black;">
     <h3>Dessert</h3>
