--- a/plan.html
+++ b/plan.html
@@ -60,40 +60,47 @@
     <hr style="height: 2px; background-color: black;">
     <h3>Food</h3>
     <a href="https://www.google.com/maps/place/Shikairou+Chinese+Restaurant/@32.7364739,129.8649562,17z/data=!3m1!5s0x35155310241b807d:0x55374f5f3f5d9984!4m14!1m7!3m6!1s0x3515531023efffff:0xfa207539f0b58758!2sShikairou+Chinese+Restaurant!8m2!3d32.7364695!4d129.8698217!16s%2Fm%2F0nbg3pz!3m5!1s0x3515531023efffff:0xfa207539f0b58758!8m2!3d32.7364695!4d129.8698217!16s%2Fm%2F0nbg3pz?entry=ttu">
-       Shikairou Chinese Restaurant 長崎ちゃんぽん
+       1. Shikairou Chinese Restaurant 長崎ちゃんぽん
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/Japanese+YoHira/@32.741265,129.8760232,17z/data=!3m1!4b1!4m6!3m5!1s0x3515531539820c6f:0x5e8a0810b4dcd06e!8m2!3d32.7412605!4d129.8786035!16s%2Fg%2F1td_d_lm?entry=ttu">
-        Japanese YoHira
+        2. Japanese YoHira
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/Original+Chawanmushi+YOSSOU+(Hamamachi+Main+Branch)/@32.7445109,129.8761945,17z/data=!3m1!4b1!4m6!3m5!1s0x351553407ee7944d:0x8f290407d10c9eaa!8m2!3d32.7445064!4d129.8787748!16s%2Fg%2F11ckqrg6w7?entry=ttu">
-        Original Chawanmushi YOSSOU (Hamamachi Main Branch)
+        3. Original Chawanmushi YOSSOU (Hamamachi Main Branch)
     </a>
     <hr style="height: 2px; background-color: black;">
     <h3>Dessert</h3>
     <a href="https://www.google.com/maps/place/Shooken+Honten/@32.7488218,129.8800223,17z/data=!3m1!5s0x351553470a3e0cad:0x610a289cb86445e7!4m15!1m8!3m7!1s0x351553470a4fa3f1:0xc5a192aa4247e429!2sShooken+Honten!8m2!3d32.7488218!4d129.8800223!10e5!16s%2Fg%2F1tdbhrk7!3m5!1s0x351553470a4fa3f1:0xc5a192aa4247e429!8m2!3d32.7488218!4d129.8800223!16s%2Fg%2F1tdbhrk7?entry=ttu">
-       Shooken Honten
+       1. Shooken Honten
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/NGS+COFFEE/@32.7535325,129.8711159,16z/data=!3m1!5s0x3515533a66f63a8b:0x9f1cfed55a497136!4m15!1m8!3m7!1s0x3515539638b8c283:0x51f935751dd420e9!2sNGS+COFFEE!8m2!3d32.753563!4d129.8712503!10e5!16s%2Fg%2F11gmzk6kr_!3m5!1s0x3515539638b8c283:0x51f935751dd420e9!8m2!3d32.753563!4d129.8712503!16s%2Fg%2F11gmzk6kr_?entry=ttu">
-     NGS COFFEE
+     2. NGS COFFEE
     </a>
     <hr style="height: 2px; background-color: black;">
     <h3>Place</h3>
-    <a>ワンちゃんカフェ</a>
+    <a>1. ワンちゃんカフェ</a>
+    <br>
     <a href="https://www.google.com/maps/place/Nagasaki+Shinchi+Chinatown/@32.7417069,129.8730138,17z/data=!3m1!4b1!4m6!3m5!1s0x35155315a11f732b:0x119748a28f551116!8m2!3d32.7417024!4d129.8755941!16s%2Fm%2F04dz48t?entry=ttu"> 
-        Nagasaki Shinchi Chinatown
+        2. Nagasaki Shinchi Chinatown
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/Glover+Garden/@32.7343359,129.8666083,17z/data=!3m2!4b1!5s0x3515530f9eacc097:0x89fc282919914bc9!4m6!3m5!1s0x35155384824480df:0xebc85b717b0fdb9b!8m2!3d32.7343314!4d129.8691886!16zL20vMGc0czhf?entry=ttu">
-      Glover Garden
+      3. Glover Garden
     </a>
     <br>
     <a href="https://www.google.com/maps/place/Megane+Bridge/@32.7485388,129.8694652,15.13z/data=!4m6!3m5!1s0x351553473a1ffa49:0xd48e5b85a7fe8b5e!8m2!3d32.7471506!4d129.8801045!16s%2Fm%2F027lv_1?entry=ttu">
-      Megane Bridge
+      4. Megane Bridge
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/Nagasaki+Prefectural+Art+Museum/@32.7425728,129.8707239,17.5z/data=!4m6!3m5!1s0x35155316e0c9abcd:0xa27d190ac665a4aa!8m2!3d32.7419105!4d129.8703177!16s%2Fg%2F120q6zjm?entry=ttu">
-     Nagasaki Prefectural Art Museum
+     5. Nagasaki Prefectural Art Museum
     </a>
+    <br>
     <a href="https://www.google.com/maps/place/Huis+Ten+Bosch/@33.0897243,129.7893118,17z/data=!3m1!4b1!4m6!3m5!1s0x356abd666eb3cfbd:0x6f267b427d8778f7!8m2!3d33.0897198!4d129.7918921!16s%2Fm%2F02852cx?entry=ttu">
-        Huis Ten Bosch
+        6. Huis Ten Bosch
     </a>
 
 </body>
